fix recommend formation layouting and overlap

--- a/app/src/components/layout.css
+++ b/app/src/components/layout.css
@@ -144,6 +144,10 @@ p {
   flex-wrap: wrap;
 }
 
+.formation-recommender-card div {
+  max-width: 20rem;
+}
+
 
 @media only screen and (max-width: 1100px) {
   html {
@@ -173,6 +177,15 @@ p {
 
   h1 {
     font-size: 25px;
+  }
+
+  .formation-recommender-card {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .formation-recommender-card div {
+    margin-top: .5rem;
   }
 
 }
